# sonomemo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
docs/: AGENDA_TIMELINE_UX_SPEC.md
example/: 2025-12-16.md
examples/: full_config_sample.toml
src/: actions.rs  app.rs  config.rs  date_input.rs  main.rs  models.rs  storage.rs  task_metadata.rs
src/editor/: markdown.rs  mod.rs  vim.rs
src/input/: editing.rs  mod.rs  navigate.rs  popups.rs  search.rs
src/integrations/: gemini.rs  google.rs  mod.rs
src/runtime/: mod.rs
src/ui/: color_parser.rs  components.rs  mod.rs  popups.rs  theme.rs
