[package]
name = "memolog"
version = "0.2.0"
edition = "2024"
authors = ["meghendra"]
description = "A terminal TUI for logging memories and context notes."
license = "MIT"
repository = "https://github.com/meghendra6/memolog"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]
keywords = ["tui", "memo", "note-taking", "productivity", "pomodoro"]

[dependencies]
chrono = "0.4.42"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
textwrap = "0.16"
unicode-width = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
regex = "1.12.2"
open = "5.3.3"
directories = "5.0.1"
syntect = "5.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.145"
rand = "0.8.5"
